Remove incorrect DCHECK

The DCHECK here was from an earlier version of the CL and doesn't apply
to the final logic. Note that |frame_presentation_callback|, called
right after the DCHECK, assumes that frame.timer exists.

TBR=penghuang@chromium.org,piman@chromium.org

Bug: 840638
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: Ib8403cb69b2c23dbd851f58c7b207e269dd5b7fe
Reviewed-on: https://chromium-review.googlesource.com/1053092
Commit-Queue: Eric Karl <ericrk@chromium.org>
Reviewed-by: Eric Karl <ericrk@chromium.org>
Cr-Commit-Position: refs/heads/master@{#557426}