ui/gl/gl_surface_presentation_helper.cc
@@ -177,7 +177,6 @@ void GLSurfacePresentationHelper::CheckPendingFrames() {
         };
 
     if (frame.result != gfx::SwapResult::SWAP_ACK) {
-      DCHECK(!frame.timer);
       frame_presentation_callback(gfx::PresentationFeedback());
       continue;
     }
